--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,9 +53,14 @@
 		</dependency>
 		<dependency>
       <groupId>org.springdoc</groupId>
-	    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-	    <version>2.3.0</version>
-   	</dependency>
+	  	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	  	<version>2.3.0</version>
+ 		</dependency>
+   	<dependency>
+		  <groupId>commons-io</groupId>
+		  <artifactId>commons-io</artifactId>
+	    <version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
